traffic-management/istio-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata: 
  name: istio-vs
spec:
  hosts: 
  - app-svc.default.svc.cluster.local
  http:
  - route:
     - destination:
         host: app-svc.default.svc.cluster.local
         subset: app-service-subset
       weight: 80
     - destination: 
         host: app2-svc.default.svc.cluster.local
         subset: app2-service-subset
       weight: 20

---

apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata: 
  name: istio-destination-rule1
spec: 
  host: app-svc.default.svc.cluster.local
  subsets: 
  - name: app-service-subset
    labels:
      app: app1
      version: v1
      chapter: istio
      topic: traffic-management
    trafficPolicy:
      loadBalancer:
        simple: ROUND_ROBIN

---

apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata: 
  name: istio-destination-rule2
spec: 
  host: app2-svc.default.svc.cluster.local
  subsets: 
  - name: app2-service-subset
    labels:
      app: app1
      version: v2
      chapter: istio
      topic: traffic-management
    trafficPolicy:
      loadBalancer:
        simple: ROUND_ROBIN
